# gpui-demo

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: button.rs  color.rs  display_link.rs  div.rs  element.rs  geometry.rs  label.rs  layout.rs  main.rs  metal_view.rs  renderer.rs  scene.rs  shaders.rs  style.rs  text.rs
